<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingTop="50dp"
    android:paddingRight="25dp"
    android:paddingBottom="85dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/clock_spinner"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:dropDownWidth="match_parent"></Spinner>

        <Button
            android:id="@+id/set_clock_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_clock"
            app:icon="@drawable/time"
            app:iconGravity="end" />

    </LinearLayout>

    <Button
        android:id="@+id/set_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_alarm"
        app:icon="@drawable/alarm"
        app:iconGravity="textEnd" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/custom_text_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="7dp"
            android:text="@string/custom_text_prompt"
            android:textSize="16sp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="0" />

        <EditText
            android:id="@+id/custom_text_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:maxLength="32" />

    </LinearLayout>

    <Button
        android:id="@+id/set_message_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/set_message"
        app:icon="@drawable/message"
        app:iconGravity="end" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <Button
        android:id="@+id/reconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reconnect"
        app:icon="@drawable/connect"
        app:iconGravity="textEnd" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider" />

</LinearLayout>